# plone.autoinclude

./: .gitignore  .meta.toml  CHANGES.rst  MANIFEST.in  README.rst  TODO.rst  buildout.cfg  buildout5.cfg  buildoutz3c.cfg  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test-matrix.yml  tests.yml
news/: +07db8b8f.tests.rst  +41480e41.tests.rst  +73c84de3.tests.rst  +a9699049.internal.rst  +ec0e6475.tests.rst  +f1c811e0.tests.rst  1.bugfix  11.bugfix  16.bugfix  17.bugfix  19.feature  22.bugfix  24.breaking  25.bugfix  25.bugfix.rst  32.bugfix.rst  34.bugfix  36.bugfix.rst  4126.bugfix
package-includes/: plone.autoinclude-configure.zcml  plone.autoinclude-meta.zcml  plone.autoinclude-overrides.zcml
src/plone/autoinclude/: loader.py  meta.zcml  (+1 more)
test-packages/ExampleCamelCase/: pyproject.toml  setup.py
test-packages/example.addon/: setup.py
test-packages/example.basetestpackage/: setup.py
test-packages/example.different/: setup.py
test-packages/example.different2/: setup.py
test-packages/example.metaoverrides/: setup.py
test-packages/example.multipleeps/: setup.py
test-packages/example.plone-dash-addon/: setup.py
test-packages/example.ploneaddon/: setup.py
test-packages/example.ploneintegration/: setup.py
test-packages/example.zopeaddon/: setup.py
test-packages/example.zopeintegration/: setup.py
test-packages/namespaceexample.native/: setup.py
test-packages/namespaceexample.pkgresources/: setup.py
test-packages/namespaceexample.pkgutilns/: setup.py
test-packages/namespaceexample2.pkgresources/: pyproject.toml  setup.py
(+56 files in other folders)
