[metadata]
long_description = file: README.rst, CHANGES.rst

# When Python 2-3 compatible:
[bdist_wheel]
universal = 1

[check-manifest]
ignore =
    *.cfg
    .coveragerc
    .editorconfig
    package-includes/*
    tox.ini

[isort]
# black compatible isort rules:
force_alphabetical_sort = True
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
lines_after_imports = 2
line_length = 88

[flake8]
# black compatible flake8 rules:
ignore =
    W503,
    C812,
    E501
    T001
    C813
# E203, E266
exclude = bootstrap.py,docs,*.egg.,omelette
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4,B9

builtins = unicode,basestring
